# autotui

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  release.sh  sample_playlist.json
.github/workflows/: release.yml
src/: app.rs  buffer.rs  main.rs  player.rs  playlist.rs  spectrum.rs
