[package]
name = "autotui"
version = "0.2.5"
edition = "2021"
description = "A terminal-based music player for learning and vibing"
license = "MIT"
repository = "https://github.com/yourusername/autotui"

[dependencies]
# Terminal handling
crossterm = "0.28"

# Low-level audio output
cpal = "0.15"

# Audio decoding (MP3, FLAC, WAV, OGG, etc.)
symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "wav", "pcm"] }

# FFT for spectrum analysis
rustfft = "6.2"

# Audio resampling
rubato = "0.16"

# Error handling
anyhow = "1.0"

# For handling file paths
walkdir = "2.5"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# JSON playlist support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Shuffle support
rand = "0.8"
